# OpenMeshedAnatomy

./: CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg
bundles/desktop/: README.md  create_exe.bat  create_linux.sh  create_mac.sh  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
examples/jupyter/: show.ipynb
oma/app/: core.py  ui.py  visualization.py
oma/data/: atlas-colortable-paraview.json  atlas_with_skullscalp.ctbl  material-atlas-colortable-paraview.json  material_with_skullscalp.ctbl
oma/module/: __init__.py
openmeshedanatomy/: CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml
openmeshedanatomy/bundles/desktop/: README.md  create_exe.bat  create_linux.sh  create_mac.sh  run.py
openmeshedanatomy/bundles/docker/: README.md
openmeshedanatomy/bundles/docker/scripts/: build_image.sh  run_image.sh
openmeshedanatomy/bundles/docker/setup/: apps.yml  requirements.txt
openmeshedanatomy/examples/jupyter/: show.ipynb
openmeshedanatomy/src/openmeshedanatomy/app/: core.py
openmeshedanatomy/src/openmeshedanatomy/module/: __init__.py
openmeshedanatomy/tests/: test_import.py
openmeshedanatomy/vue-components/: package-lock.json  package.json  vite.config.js
tests/: test_import.py
vue-components/: package-lock.json  package.json  vite.config.js
